db-cluster/users/k8s-cluster2/ns-pengseangsim210-gmail-com-db673127/seang/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: seang-tcp
  namespace: ns-pengseangsim210-gmail-com-db673127
spec:
  entryPoints:
  - postgresql
  routes:
  - match: HostSNI(`seang.autonomous-istad.com`)
    services:
    - name: seang-postgresql-pooler-rw
      port: 5432
  tls:
    passthrough: true
